...
                key: const ValueKey("email"),
                decoration: const InputDecoration(hintText: "Enter email here"),
                validator: (value) => EmailValidator.validateEmail(value ?? ""),
              ),
              TextFormField(
                controller: _passwordController,
                key: const ValueKey("password"),
                obscureText: true,
                decoration:
                    const InputDecoration(hintText: "Enter password here"),
                validator: (value) =>
                    EmailValidator.validatePassword(value ?? ""),
              ),
...
